# sml

./: .gitignore  GRAMMER.md  GRAMMER.txt  README.md  err.rs  meson.build  out.txt  testall.sh  warnings.txt
bfic/: bfic.c  hw.b
examples/: 0.smol  1.sml  1.smol  2.sml  2.smol  3.smol  4.smol  arr.smol  basic.smol  bfis.smol  err.smol  fileio.smol  fn.smol  inf-fact.smol  leak.smol  loops.smol  operators.smol  pascal.cpp  pascal.smol  recursive.smol  ret.smol  string.smol  syntax_error.smol  tern.smol
inc/: ast.h  expr.h  intpr.h  lexer.h  parser.h  pool.h  sml.h  smol.h  stmt.h  sym.h  token.h
src/: expr.cpp  intpr.cpp  lexer.cpp  meson.build  parser.cpp  sml.cpp  smol.cpp  smol.h  token.cpp
src/ast/: binary.cpp  expr.cpp  expr.h  function.cpp  llvm-includes.h  meson.build  prototype.h  stmt.cpp  stmt.h  unary.cpp
src/ast/expr/: arr.cpp  asgmt.cpp  binary.cpp  cond.cpp  expr.h  fn.cpp  grouping.cpp  ident.cpp  literal.cpp  method.cpp  ternary.cpp  unary.cpp  var.cpp
src/ast/stmt/: asgmtstmt.cpp  blockstmt.cpp  cond_stmt.cpp  elifstmt.cpp  exprstmt.cpp  ifstmt.cpp  retstmt.cpp  saystmt.cpp  stmt.cpp  stmt.h  whilestmt.cpp
src/env/: env.cpp  env.h  fntable.cpp  fntable.h  retstack.cpp  retstack.h
src/intpr/: env.cpp  env.h  intpr.cpp  intpr.h  sym.cpp  sym.h  sym_table.cpp
src/jit/: jit.hpp
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/lib/: ffi.cpp  ffi.h  lib.h  libstr.h  meson.build  tostr.cpp  tostr.h  userfn.cpp
src/lib/methods/: libarr.cpp  libarr.h  libfile.cpp  libfile.h  libstr.cpp  libstr.h
src/lib/stdlib/: ascii.cpp  ascii.h  exit.cpp  exit.h  fopen.cpp  fopen.h  getchar.cpp  getchar.h  help.cpp  help.h  tostr.cpp  tostr.h
src/parser/: parser.cpp  parser.h
src/tables/: fntable.cpp  fntable.h  sym.cpp  sym.h  vartable.cpp  vartable.h
src/util/: ArgsParser.cpp  ArgsParser.h  ansi.h  array.cpp  bool.cpp  fn.cpp  fn.h  meson.build  number.cpp  object.h  pool.cpp  smol_error.cpp  smol_error.h  string.cpp  userfn.cpp  value.cpp  value.h
src/util/object/: array.cpp  bool.cpp  error.h  file.cpp  number.cpp  object.cpp  object.h  string.cpp  var.h
util/: generate_ast.cpp
