# gather ast sources and headers into vars
ast_expr_src = files(
  ['expr/expr.cpp', 'expr/literal.cpp', 'expr/ident.cpp',
    'expr/binary.cpp', 'expr/unary.cpp', 'expr/grouping.cpp']
)
ast_expr_inc = include_directories('expr')

ast_stmt_src = files(['stmt/stmt.cpp', 'stmt/cond_stmt.cpp'])
ast_stmt_inc = include_directories('stmt')
